<resources>
    <string name="app_name">ZalegoCourseApp</string>

    <string name="txtSignIn">Sign In</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="txtHaveNoAccount">Have No Account? Sign Up here</string>
    <string name="txtHaveAnAccount">Already have an account? Sign In here</string>
    <string name="txtCourseListLabel">Course List:</string>
    <string name="txtCourseTitle">Course Title</string>
    <string name="txtCourseDescription">Course Description</string>

    <string name="edEmailAddress">Email Address</string>
    <string name="edPassword">Password</string>
    <string name="edConfirmPassword">Confirm Password</string>
    <string name="edFirstName">First Name</string>
    <string name="edMiddleName">Middle Name</string>
    <string name="edSurname">Surname</string>
    <string name="edCourseTitle">Course Title</string>
    <string name="edCourseDescription">Course Description</string>

    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnSaveCourse">Save Course</string>

    <string name="fabAddCourse">Add Course</string>

</resources>
