<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_activity_top_bottom"
    android:paddingLeft="@dimen/padding_activity_left_right"
    android:paddingRight="@dimen/padding_activity_left_right"
    android:paddingBottom="@dimen/padding_activity_top_bottom"
    android:scrollbars="none"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgvAppIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/zalego_logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txtSignUpLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgvAppIcon"
            android:layout_marginTop="20dp"
            android:text="@string/txtSignUp"
            android:textSize="@dimen/textSize28"
            android:textStyle="bold"
            android:gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignUpEditFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSignUpLabel"
            android:layout_marginTop="20dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_card"
                android:orientation="vertical"
                android:baselineAligned="true">

                <LinearLayout
                    android:id="@+id/lilaySignUpFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <EditText
                        android:id="@+id/edSignUpFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/edFirstName"
                        android:inputType="textCapWords"/>

                    <EditText
                        android:id="@+id/edSignUpMiddleName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/edMiddleName"
                        android:inputType="textCapWords"/>

                    <EditText
                        android:id="@+id/edSignUpSurname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/edSurname"
                        android:inputType="textCapWords"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lilaySignUpEmailFields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSignUpEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedSignUpEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edEmailAddress"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSignUpPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedSignUpPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edPassword"
                            android:inputType="textPassword"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSignUpConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedSignUpConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edConfirmPassword"
                            android:inputType="textPassword"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:text="@string/btnSignUp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtSignUpHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardSignUpEditFields"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/txtHaveAnAccount"
            android:textStyle="italic"
            android:gravity="right|end"/>
    </RelativeLayout>
</ScrollView>