<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_activity_top_bottom"
    android:paddingLeft="@dimen/padding_activity_left_right"
    android:paddingRight="@dimen/padding_activity_left_right"
    android:paddingBottom="@dimen/padding_activity_top_bottom"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgvAppIcon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/zalego_logo"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/txtSignInLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgvAppIcon"
                android:layout_marginTop="20dp"
                android:text="@string/txtSignIn"
                android:textSize="@dimen/textSize28"
                android:textStyle="bold"
                android:gravity="center"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSignInEditFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtSignInLabel"
                android:layout_marginTop="20dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_card"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSignInEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedSignInEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edEmailAddress"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSignInPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tiedSignInPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/edPassword"
                            android:inputType="textPassword"
                            android:singleLine="true"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@id/cardSignInEditFields"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:text="@string/btnSignIn"/>

            <TextView
                android:id="@+id/txtSignInHaveNoAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSignIn"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/txtHaveNoAccount"
                android:textStyle="italic"
                android:gravity="right|end"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>