<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_activity_top_bottom"
    android:paddingLeft="@dimen/padding_activity_left_right"
    android:paddingStart="@dimen/padding_activity_left_right"
    android:paddingRight="@dimen/padding_activity_left_right"
    android:paddingEnd="@dimen/padding_activity_left_right"
    android:paddingBottom="@dimen/padding_activity_top_bottom"
    tools:context=".AddCourseActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddCourseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedAddCourseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edCourseTitle"
            android:inputType="textCapWords"
            android:singleLine="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAddCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tilAddCourseTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiedAddCourseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edCourseDescription"
            android:inputType="textCapSentences"
            android:maxLines="5"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/btnSaveCourse"
        app:layout_constraintTop_toBottomOf="@id/tilAddCourseDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>